objects/LAT_AccountInActionCollectLine__c.object
<CustomObject>
    <fields>
        <fullName>DataCollect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dado a coletar</label>
        <referenceTo>LAT_DataCollect__c</referenceTo>
        <relationshipLabel>Account In Action Collect Lines</relationshipLabel>
        <relationshipName>AccountInActionCollectLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_AccountInActionCollect__c</fullName>
        <label>Account In Action Collect</label>
        <referenceTo>LAT_AccountInActionCollect__c</referenceTo>
        <relationshipLabel>Account In Action Collect Lines</relationshipLabel>
        <relationshipName>AccountInActionCollectLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LAT_ProductName__c</fullName>
        <formula>DataCollect__r.AgrupamentoProdutos__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Produto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Valor</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Account In Action Collect Line</label>
    <nameField>
        <displayFormat>AAL-{0000}</displayFormat>
        <label>Account In Action Collect Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account In Action Collect Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>